Fix media element field behavior when playing MediaStreams

Set operations for the preload, defaultPlaybackRate and playbackRate
fields should be ignored when the media element is playing a
MediaStream.
In addition, the preload field must always return "none", and
defaultPlaybackRate and playbackRate must both return 1.

See https://w3c.github.io/mediacapture-main/#mediastreams-in-media-elements

Bug: 892114
Change-Id: Id50e557056b9501330bb753535e2cbdb80fc4667
Reviewed-on: https://chromium-review.googlesource.com/c/1261445
Commit-Queue: Guido Urdaneta <guidou@chromium.org>
Reviewed-by: Mounir Lamouri <mlamouri@chromium.org>
Cr-Commit-Position: refs/heads/master@{#598566}